tentando resolver problema de overflow

--- a/src/assets/styles/_geral.scss
+++ b/src/assets/styles/_geral.scss
@@ -16,3 +16,7 @@ body {
   font-size: 1.2rem;
   text-transform: uppercase;
 }
+
+.App {
+  overflow-x: hidden;
+}
