--- a/src/assets/styles/_tela-inicial.scss
+++ b/src/assets/styles/_tela-inicial.scss
@@ -1,7 +1,7 @@
 .tela-inicial {
   position: relative;
   box-sizing: border-box;
-  height: 100vh;
+  height: 98vh;
   padding: 10px;
   display: flex;
   flex-direction: column;
